--- a/index.html
+++ b/index.html
@@ -42,6 +42,13 @@
           nostrum soluta quam nam, id voluptate! Corrupti cum laudantium.
         </p>
       </section>
+
+      <section id="info">
+        <h3>What We do</h3>
+        <div id="services">
+          <div class="service-content"></div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
